// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Automated Storybook Snapshots UI/Typeahead Multiple 1`] = `
<div
  class="typeahead"
  id="plop_wrapper"
  style="width: 800px;"
>
  <div
    class="flex typeahead-wrapper p-xs"
  >
    
    
    <input
      autocomplete="off"
      class="typeahead-input"
      id="plop"
      placeholder="placeholder"
      type="text"
    />
  </div>
  <!--v-if-->
</div>
`;

exports[`Automated Storybook Snapshots UI/Typeahead Multiple With Initial Items 1`] = `
<div
  class="typeahead"
  id="multiple_wrapper"
  style="width: 800px;"
>
  <div
    class="flex typeahead-wrapper p-xs"
  >
    
    <button
      class="bg-neutral chip pl-m pr-m mr-xs mb-xs mt-xs"
    >
      titreItem1 
      <span>
        x
      </span>
    </button>
    <button
      class="bg-neutral chip pl-m pr-m mr-xs mb-xs mt-xs"
    >
      titreItem2 
      <span>
        x
      </span>
    </button>
    
    <input
      autocomplete="off"
      class="typeahead-input"
      id="multiple"
      placeholder="placeholder"
      type="text"
    />
  </div>
  <!--v-if-->
</div>
`;

exports[`Automated Storybook Snapshots UI/Typeahead Single 1`] = `
<div
  class="typeahead"
  id="ello_wrapper"
  style="width: 800px;"
>
  <div
    class="flex typeahead-wrapper p-xs"
  >
    
    
    <input
      autocomplete="off"
      class="typeahead-input"
      id="ello"
      placeholder="placeholder"
      type="text"
    />
  </div>
  <!--v-if-->
</div>
`;
